trivial: Improve the top blurb in gpk-prefs

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -179,7 +179,7 @@
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Each device should have one or more color profiles for a color managed workflow.</property>
+                <property name="label" translatable="yes">Each device needs an up to date color profile to be color managed.</property>
               </object>
               <packing>
                 <property name="expand">False</property>
