Add the the mnemonic-widget property to labels in the profile viewer
Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=663315

--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -121,6 +121,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes" comments="The type of profile, e.g. display, scanner, etc.">Profile type</property>
+                                <property name="mnemonic_widget">label_type</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -183,6 +184,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes" comments="The profile colorspace, e.g. RGB">Colorspace</property>
+                                <property name="mnemonic_widget">label_colorspace</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -245,6 +247,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes" comments="When the profile was created">Created</property>
+                                <property name="mnemonic_widget">label_datetime</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -308,6 +311,7 @@
                                 <property name="can_focus">False</property>
                                 <property name="valign">start</property>
                                 <property name="label" translatable="yes" comments="The version of the profile">Version</property>
+                                <property name="mnemonic_widget">label_version</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -372,6 +376,7 @@
                                 <property name="can_focus">False</property>
                                 <property name="valign">start</property>
                                 <property name="label" translatable="yes" comments="The manufacturer of the profile">Device manufacturer</property>
+                                <property name="mnemonic_widget">label_profile_manufacturer</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -436,6 +441,7 @@
                                 <property name="can_focus">False</property>
                                 <property name="valign">start</property>
                                 <property name="label" translatable="yes" comments="The manufacturer of the profile">Device model</property>
+                                <property name="mnemonic_widget">label_profile_model</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -499,6 +505,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes" comments="If the profile contains a display correction table">Display correction</property>
+                                <property name="mnemonic_widget">label_vcgt</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -561,6 +568,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">White point</property>
+                                <property name="mnemonic_widget">label_temp</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -625,6 +633,7 @@
                                 <property name="can_focus">False</property>
                                 <property name="valign">start</property>
                                 <property name="label" translatable="yes" comments="The licence of the profile, normally non-free">License</property>
+                                <property name="mnemonic_widget">label_copyright</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -688,6 +697,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes" comments="The file size in bytes of the profile">File size</property>
+                                <property name="mnemonic_widget">label_size</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -751,6 +761,7 @@
                                 <property name="can_focus">False</property>
                                 <property name="valign">start</property>
                                 <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">Filename</property>
+                                <property name="mnemonic_widget">label_filename</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
