--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -1175,6 +1175,11 @@
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
+                            <child internal-child="accessible">
+                              <object class="AtkObject" id="button_image_prev-atkobject">
+                                <property name="AtkObject::accessible-description" translatable="yes">Previous Image</property>
+                              </object>
+                            </child>
                             <child>
                               <object class="GtkImage" id="image2">
                                 <property name="visible">True</property>
@@ -1219,6 +1224,11 @@
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
+                            <child internal-child="accessible">
+                              <object class="AtkObject" id="button_image_next-atkobject">
+                                <property name="AtkObject::accessible-description" translatable="yes">Next Image</property>
+                              </object>
+                            </child>
                             <child>
                               <object class="GtkImage" id="image3">
                                 <property name="visible">True</property>
@@ -1285,6 +1295,11 @@
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
+                            <child internal-child="accessible">
+                              <object class="AtkObject" id="button_image_prev1-atkobject">
+                                <property name="AtkObject::accessible-description" translatable="yes">Previous Image</property>
+                              </object>
+                            </child>
                             <child>
                               <object class="GtkImage" id="image4">
                                 <property name="visible">True</property>
@@ -1329,6 +1344,11 @@
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
+                            <child internal-child="accessible">
+                              <object class="AtkObject" id="button_image_next1-atkobject">
+                                <property name="AtkObject::accessible-description" translatable="yes">Next Image</property>
+                              </object>
+                            </child>
                             <child>
                               <object class="GtkImage" id="image5">
                                 <property name="visible">True</property>
