--- a/help/C/color-import-linux.page
+++ b/help/C/color-import-linux.page
@@ -24,7 +24,7 @@
   </p>
   <p>
     Profile calibration curves are automatically loaded at login, or can
-    be loaded for all users at at startup if the <gui>Set for all
+    be loaded for all users at startup if the <gui>Set for all
     users</gui> button is clicked.
   </p>
 
