Fix up tooltip strings

--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -56,8 +56,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="has_tooltip">True</property>
-                        <property name="tooltip_markup" translatable="yes">Add a profile for the device</property>
-                        <property name="tooltip_text">Add a profile for the device</property>
+                        <property name="tooltip_text" translatable="yes">Add a profile for the device</property>
                         <property name="use_action_appearance">False</property>
                         <property name="use_underline">True</property>
                         <property name="icon_name">list-add-symbolic</property>
@@ -73,8 +72,7 @@
                         <property name="sensitive">False</property>
                         <property name="can_focus">False</property>
                         <property name="has_tooltip">True</property>
-                        <property name="tooltip_markup" translatable="yes">Remove a profile from the device</property>
-                        <property name="tooltip_text">Remove a profile from the device</property>
+                        <property name="tooltip_text" translatable="yes">Remove a profile from the device</property>
                         <property name="use_action_appearance">False</property>
                         <property name="use_underline">True</property>
                         <property name="icon_name">list-remove-symbolic</property>
