Tweak a few of the descriptions to reflect reality

--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -198,7 +198,7 @@
                         <property name="can_focus">False</property>
                         <property name="valign">start</property>
                         <property name="xalign">1</property>
-                        <property name="label" translatable="yes" comments="The manufacturer of the profile">Device manufacturer</property>
+                        <property name="label" translatable="yes" comments="The manufacturer of the profile">Manufacturer</property>
                         <property name="mnemonic_widget">label_profile_manufacturer</property>
                       </object>
                       <packing>
@@ -214,7 +214,7 @@
                         <property name="can_focus">False</property>
                         <property name="valign">start</property>
                         <property name="xalign">1</property>
-                        <property name="label" translatable="yes" comments="The manufacturer of the profile">Device model</property>
+                        <property name="label" translatable="yes" comments="The manufacturer of the profile">Model</property>
                         <property name="mnemonic_widget">label_profile_model</property>
                       </object>
                       <packing>
@@ -260,7 +260,7 @@
                         <property name="can_focus">False</property>
                         <property name="valign">start</property>
                         <property name="xalign">1</property>
-                        <property name="label" translatable="yes" comments="The licence of the profile, normally non-free">License</property>
+                        <property name="label" translatable="yes" comments="The licence of the profile, normally non-free">Copyright</property>
                         <property name="mnemonic_widget">label_copyright</property>
                       </object>
                       <packing>
