--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -3,7 +3,7 @@
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkDialog" id="dialog_viewer">
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="border_width">3</property>
     <property name="title" translatable="yes">Color Profile Viewer</property>
     <property name="window_position">center</property>
     <property name="type_hint">dialog</property>
@@ -11,7 +11,7 @@
       <object class="GtkBox" id="dialog-vbox2">
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">2</property>
+        <property name="spacing">5</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="dialog-action_area1">
             <property name="can_focus">False</property>
@@ -42,7 +42,6 @@
           <object class="GtkHBox" id="hbox5">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="border_width">9</property>
             <property name="spacing">6</property>
             <child>
               <object class="GtkVBox" id="vbox_profiles">
@@ -818,11 +817,13 @@
                     <property name="can_focus">False</property>
                     <property name="border_width">9</property>
                     <property name="spacing">6</property>
+                    <property name="halign">center</property>
                     <child>
                       <object class="GtkHBox" id="hbox60">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="spacing">3</property>
+                        <property name="vexpand">True</property>
                         <child>
                           <object class="GtkButton" id="button_image_prev">
                             <property name="visible">True</property>
@@ -936,11 +937,13 @@
                     <property name="can_focus">False</property>
                     <property name="border_width">9</property>
                     <property name="spacing">6</property>
+                    <property name="halign">center</property>
                     <child>
                       <object class="GtkHBox" id="hbox3">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="spacing">3</property>
+                        <property name="vexpand">True</property>
                         <child>
                           <object class="GtkButton" id="button_image_prev1">
                             <property name="visible">True</property>
